--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Warwick Institute Interview Workshop</title>
+  <meta name="description" content="Book your interview workshop session at Warwick Institute" />
+  <meta property="og:title" content="Warwick Institute Interview Workshop" />
+  <meta property="og:description" content="Book your interview workshop session at Warwick Institute" />
+  <meta property="og:type" content="website" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
